resolved issues in ErrorResponseBuilder